--- a/T2/t2.ipynb
+++ b/T2/t2.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
-    "from sklearn.linear_model import LinearRegression, Lasso, Ridge\n",
+    "from sklearn.linear_model import LinearRegression, Lasso, Ridge, LassoLarsCV, LassoLarsIC\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
     "from sklearn.feature_selection import RFECV, RFE\n",
@@ -317,14 +317,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "scaler = MinMaxScaler()\n",
-    "X_train_scaled = scaler.fit_transform(X_train)\n",
-    "X_test_scaled = scaler.transform(X_test)"
+    "# scaler = MinMaxScaler()\n",
+    "# X_train_scaled = scaler.fit_transform(X_train)\n",
+    "# X_test_scaled = scaler.transform(X_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -339,18 +348,24 @@
     }
    ],
    "source": [
+    "name = 'lin_reg'\n",
     "model=LinearRegression()\n",
     "model.fit(X_train,y_train)\n",
     "y_prediction=model.predict(X_test)\n",
-    "print(f'R: {model.score(X_test,y_test)}')\n",
-    "print('MAE:', metrics.mean_absolute_error(y_test, y_prediction))\n",
-    "print('MSE:', metrics.mean_squared_error(y_test, y_prediction))\n",
-    "print('RMSE:', np.sqrt(metrics.mean_squared_error(y_test, y_prediction)))"
+    "r = model.score(X_test,y_test)\n",
+    "mae = metrics.mean_absolute_error(y_test, y_prediction)\n",
+    "mse = metrics.mean_squared_error(y_test, y_prediction)\n",
+    "rmse = np.sqrt(metrics.mean_squared_error(y_test, y_prediction))\n",
+    "results.append({\"name\": name, \"r\": r, \"mae\": mae, \"mse\": mse, \"rmse\": rmse})\n",
+    "print('R:',r)\n",
+    "print('MAE:',mae )\n",
+    "print('MSE:', mse)\n",
+    "print('RMSE:',rmse )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -365,18 +380,24 @@
     }
    ],
    "source": [
+    "name = \"lasso\"\n",
     "model=Lasso(alpha=0.01)\n",
     "model.fit(X_train,y_train)\n",
     "y_prediction=model.predict(X_test)\n",
-    "print(f'R: {model.score(X_test,y_test)}')\n",
-    "print('MAE:', metrics.mean_absolute_error(y_test, y_prediction))\n",
-    "print('MSE:', metrics.mean_squared_error(y_test, y_prediction))\n",
-    "print('RMSE:', np.sqrt(metrics.mean_squared_error(y_test, y_prediction)))"
+    "r = model.score(X_test,y_test)\n",
+    "mae = metrics.mean_absolute_error(y_test, y_prediction)\n",
+    "mse = metrics.mean_squared_error(y_test, y_prediction)\n",
+    "rmse = np.sqrt(metrics.mean_squared_error(y_test, y_prediction))\n",
+    "results.append({\"name\": name, \"r\": r, \"mae\": mae, \"mse\": mse, \"rmse\": rmse})\n",
+    "print('R:',r)\n",
+    "print('MAE:',mae )\n",
+    "print('MSE:', mse)\n",
+    "print('RMSE:',rmse )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -391,18 +412,24 @@
     }
    ],
    "source": [
+    "name = \"ridge\"\n",
     "model=Ridge(alpha=0.1)\n",
     "model.fit(X_train,y_train)\n",
     "y_prediction=model.predict(X_test)\n",
-    "print(f'R: {model.score(X_test,y_test)}')\n",
-    "print('MAE:', metrics.mean_absolute_error(y_test, y_prediction))\n",
-    "print('MSE:', metrics.mean_squared_error(y_test, y_prediction))\n",
-    "print('RMSE:', np.sqrt(metrics.mean_squared_error(y_test, y_prediction)))"
+    "r = model.score(X_test,y_test)\n",
+    "mae = metrics.mean_absolute_error(y_test, y_prediction)\n",
+    "mse = metrics.mean_squared_error(y_test, y_prediction)\n",
+    "rmse = np.sqrt(metrics.mean_squared_error(y_test, y_prediction))\n",
+    "results.append({\"name\": name, \"r\": r, \"mae\": mae, \"mse\": mse, \"rmse\": rmse})\n",
+    "print('R:',r)\n",
+    "print('MAE:',mae )\n",
+    "print('MSE:', mse)\n",
+    "print('RMSE:',rmse )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -417,19 +444,25 @@
     }
    ],
    "source": [
+    "name = \"rfecv\"\n",
     "regressor = LinearRegression()\n",
     "model = RFECV(regressor, step=1, cv=10)             \n",
     "model = model.fit(X_train, y_train)\n",
     "y_prediction=model.predict(X_test)\n",
-    "print(f'R: {model.score(X_test,y_test)}')\n",
-    "print('MAE:', metrics.mean_absolute_error(y_test, y_prediction))\n",
-    "print('MSE:', metrics.mean_squared_error(y_test, y_prediction))\n",
-    "print('RMSE:', np.sqrt(metrics.mean_squared_error(y_test, y_prediction)))\n"
+    "r = model.score(X_test,y_test)\n",
+    "mae = metrics.mean_absolute_error(y_test, y_prediction)\n",
+    "mse = metrics.mean_squared_error(y_test, y_prediction)\n",
+    "rmse = np.sqrt(metrics.mean_squared_error(y_test, y_prediction))\n",
+    "results.append({\"name\": name, \"r\": r, \"mae\": mae, \"mse\": mse, \"rmse\": rmse})\n",
+    "print('R:',r)\n",
+    "print('MAE:',mae )\n",
+    "print('MSE:', mse)\n",
+    "print('RMSE:',rmse )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -444,68 +477,38 @@
     }
    ],
    "source": [
+    "name = \"rfe\"\n",
     "regressor = LinearRegression()\n",
     "model = RFE(regressor, n_features_to_select=5, step=1)             \n",
     "model = model.fit(X_train, y_train)\n",
     "y_prediction=model.predict(X_test)\n",
-    "print(f'R: {model.score(X_test,y_test)}')\n",
-    "print('MAE:', metrics.mean_absolute_error(y_test, y_prediction))\n",
-    "print('MSE:', metrics.mean_squared_error(y_test, y_prediction))\n",
-    "print('RMSE:', np.sqrt(metrics.mean_squared_error(y_test, y_prediction)))\n"
+    "r = model.score(X_test,y_test)\n",
+    "mae = metrics.mean_absolute_error(y_test, y_prediction)\n",
+    "mse = metrics.mean_squared_error(y_test, y_prediction)\n",
+    "rmse = np.sqrt(metrics.mean_squared_error(y_test, y_prediction))\n",
+    "results.append({\"name\": name, \"r\": r, \"mae\": mae, \"mse\": mse, \"rmse\": rmse})\n",
+    "print('R:',r)\n",
+    "print('MAE:',mae )\n",
+    "print('MSE:', mse)\n",
+    "print('RMSE:',rmse )\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "R: 0.3578963443521733\n",
-      "MAE: 0.48331498303646875\n",
-      "MSE: 0.38846869851908733\n",
-      "RMSE: 0.6232725716081908\n"
+      "best result: ridge\n"
      ]
     }
    ],
    "source": [
-    "regressor = LinearRegression()\n",
-    "model = RFE(regressor, n_features_to_select=6, step=1)             \n",
-    "model = model.fit(X_train, y_train)\n",
-    "y_prediction=model.predict(X_test)\n",
-    "print(f'R: {model.score(X_test,y_test)}')\n",
-    "print('MAE:', metrics.mean_absolute_error(y_test, y_prediction))\n",
-    "print('MSE:', metrics.mean_squared_error(y_test, y_prediction))\n",
-    "print('RMSE:', np.sqrt(metrics.mean_squared_error(y_test, y_prediction)))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 90,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "R: 0.36152578275823455\n",
-      "MAE: 0.4826846570063026\n",
-      "MSE: 0.38627291096741034\n",
-      "RMSE: 0.621508576744851\n"
-     ]
-    }
-   ],
-   "source": [
-    "regressor = LinearRegression()\n",
-    "model = RFE(regressor, n_features_to_select=7, step=1)             \n",
-    "model = model.fit(X_train, y_train)\n",
-    "y_prediction=model.predict(X_test)\n",
-    "print(f'R: {model.score(X_test,y_test)}')\n",
-    "print('MAE:', metrics.mean_absolute_error(y_test, y_prediction))\n",
-    "print('MSE:', metrics.mean_squared_error(y_test, y_prediction))\n",
-    "print('RMSE:', np.sqrt(metrics.mean_squared_error(y_test, y_prediction)))\n"
+    "best_result = min(results, key=lambda x: x['rmse'])\n",
+    "print(\"best result:\",best_result['name'])"
    ]
   }
  ],
