new example for kan

--- a/FinalPresentation/kan_demosntration.ipynb
+++ b/FinalPresentation/kan_demosntration.ipynb
@@ -13,7 +13,7 @@
     "from sklearn.datasets import make_moons\n",
     "import pandas as pd\n",
     "from sklearn.model_selection import train_test_split\n",
-    "\n",
+    "from sklearn.preprocessing import OrdinalEncoder\n",
     "np.random.seed(0)"
    ]
   },
@@ -37,8 +37,8 @@
     "dtype = torch.get_default_dtype()\n",
     "dataset['train_input'] = torch.from_numpy(train_input).type(dtype)\n",
     "dataset['test_input'] = torch.from_numpy(test_input).type(dtype)\n",
-    "dataset['train_label'] = torch.from_numpy(train_label[:, None]).type(dtype)\n",
-    "dataset['test_label'] = torch.from_numpy(test_label[:, None]).type(dtype)\n",
+    "dataset['train_label'] = torch.from_numpy(train_label[:,None]).type(dtype)\n",
+    "dataset['test_label'] = torch.from_numpy(test_label[:,None]).type(dtype)\n",
     "\n",
     "X = dataset['train_input']\n",
     "y = dataset['train_label']\n",
@@ -60,10 +60,17 @@
    "source": [
     "# [2,5,1] means 2 inputs, 5 hidden add neurons, and 1 output\n",
     "# [2,[5,2],1] means 2 inputs, 5 hidden add neurons and 2 hidden multiplication neurons, and 1 output.\n",
-    "model = KAN(width=[2, 5, 3, 2, 1, 1], grid=3, k=3)\n",
+    "# grid é a 'resolução' da spline\n",
+    "# k é a ordem polinomial da spline\n",
+    "model = KAN(width=[2, 1], grid=3, k=3)\n",
     "\n",
+    "def train_acc():\n",
+    "    return torch.mean((torch.round(model(dataset['train_input'])[:,0]) == dataset['train_label'][:,0]).type(dtype))\n",
     "\n",
-    "model_results = model.fit(dataset, opt=\"LBFGS\", steps=100)"
+    "def test_acc():\n",
+    "    return torch.mean((torch.round(model(dataset['test_input'])[:,0]) == dataset['test_label'][:,0]).type(dtype))\n",
+    "\n",
+    "model_results = model.fit(dataset, opt=\"LBFGS\", steps=20, metrics=(train_acc, test_acc))"
    ]
   },
   {
@@ -72,7 +79,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# model.plot()  # semi quebrado na 0.2.1"
+    "model.plot()"
    ]
   },
   {
@@ -82,17 +89,8 @@
    "outputs": [],
    "source": [
     "lib = ['x', 'x^2', 'x^3', 'x^4', 'exp', 'log', 'sqrt', 'tanh', 'sin', 'tan', 'abs', 'cos']\n",
-    "model.auto_symbolic(lib=lib)  # semi quebrado na 0.2.1: pesa muito o c, se nao passar a lib quase tudo vira 0\n",
+    "model.auto_symbolic(lib=lib)\n",
     "formula = model.symbolic_formula()[0][0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "formula"
    ]
   },
   {
@@ -157,8 +155,10 @@
     "dataset['train_input'] = torch.from_numpy(X_train.values).type(dtype)\n",
     "dataset['test_input'] = torch.from_numpy(X_test.values).type(dtype)\n",
     "\n",
-    "dataset['train_label'] = torch.from_numpy(y_train.values).type(dtype)\n",
-    "dataset['test_label'] = torch.from_numpy(y_test.values).type(dtype)"
+    "encoder = OrdinalEncoder()\n",
+    "encoder.fit_transform(y_train.values.reshape(-1, 1))\n",
+    "dataset['train_label'] = torch.from_numpy(encoder.fit_transform(y_train.values.reshape(-1, 1)).flatten()).type(torch.LongTensor)\n",
+    "dataset['test_label'] = torch.from_numpy(encoder.transform(y_train.values.reshape(-1, 1)).flatten()).type(torch.LongTensor)"
    ]
   },
   {
@@ -167,10 +167,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = KAN(width=[X_train.shape[1], 6, 5, 2, 1], grid=3, k=3)\n",
-    "\n",
-    "\n",
-    "model_results = model.fit(dataset, opt=\"LBFGS\", steps=100)"
+    "model = KAN(width=[X_train.shape[1], 6, 6], grid=3, k=3)\n",
+    "model_results = model.fit(dataset, opt=\"LBFGS\", steps=100, loss_fn=torch.nn.CrossEntropyLoss())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.plot()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.prune()\n",
+    "model.plot()"
    ]
   },
   {
@@ -180,8 +197,7 @@
    "outputs": [],
    "source": [
     "lib = ['x', 'x^2', 'x^3', 'x^4', 'exp', 'log', 'sqrt', 'tanh', 'sin', 'tan', 'abs', 'cos']\n",
-    "model.auto_symbolic(lib=lib)  # semi quebrado na 0.2.1: pesa muito o c, se nao passar a lib quase tudo vira 0\n",
-    "formula = model.symbolic_formula()[0][0]"
+    "model.auto_symbolic(lib=lib)"
    ]
   },
   {
@@ -190,7 +206,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "formula"
+    "func1 = model.symbolic_formula()[0][0]\n",
+    "expr_func1 = sp.lambdify(list(func1.free_symbols), formula, \"numpy\")\n",
+    "results1 = expr_func1(**{symbol.name: np.array(dataset['test_input'][:, i]) for i,symbol in enumerate(ex_round(func1,2).free_symbols)})\n",
+    "\n",
+    "func2 = model.symbolic_formula()[0][1]\n",
+    "expr_func2 = sp.lambdify(list(func2.free_symbols), formula, \"numpy\")\n",
+    "results2 = expr_func2(**{symbol.name: np.array(dataset['test_input'][:, i]) for i,symbol in enumerate(ex_round(func2,2).free_symbols)})\n",
+    "\n",
+    "func3 = model.symbolic_formula()[0][2]\n",
+    "expr_func3 = sp.lambdify(list(func3.free_symbols), formula, \"numpy\")\n",
+    "results3 = expr_func3(**{symbol.name: np.array(dataset['test_input'][:, i]) for i,symbol in enumerate(ex_round(func3,2).free_symbols)})\n",
+    "\n",
+    "func4 = model.symbolic_formula()[0][3]\n",
+    "expr_func4 = sp.lambdify(list(func4.free_symbols), formula, \"numpy\")\n",
+    "results4 = expr_func4(**{symbol.name: np.array(dataset['test_input'][:, i]) for i,symbol in enumerate(ex_round(func4,2).free_symbols)})\n",
+    "\n",
+    "func5 = model.symbolic_formula()[0][4]\n",
+    "expr_func5 = sp.lambdify(list(func5.free_symbols), formula, \"numpy\")\n",
+    "results5 = expr_func5(**{symbol.name: np.array(dataset['test_input'][:, i]) for i,symbol in enumerate(ex_round(func5,2).free_symbols)})\n",
+    "\n",
+    "func6 = model.symbolic_formula()[0][5]\n",
+    "expr_func6 = sp.lambdify(list(func6.free_symbols), formula, \"numpy\")\n",
+    "results6 = expr_func6(**{symbol.name: np.array(dataset['test_input'][:, i]) for i,symbol in enumerate(ex_round(func6,2).free_symbols)})\n"
    ]
   },
   {
@@ -199,7 +237,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "results = expr_func(**{f'x_{i+1}': np.array(dataset['test_input'][:, i]) for i in range(X_test.shape[1])})"
+    "y_pred = encoder.inverse_transform(np.argmax([results1, results2, results3, results4, results5, results6], axis=0).reshape(-1, 1)).flatten()"
    ]
   },
   {
@@ -208,19 +246,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.figure()\n",
+    "plt.figure(figsize=(15,5))\n",
     "plt.scatter(np.arange(y_test.shape[0]), y_test)  # np.round(results,0)\n",
-    "plt.scatter(np.arange(y_test.shape[0]), results)\n",
+    "plt.scatter(np.arange(y_test.shape[0]), y_pred)\n",
     "plt.title('PREDICTION')\n",
     "plt.show()"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
-   "source": [
-    "# Comparando com MLP"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -239,7 +277,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.10.8"
   }
  },
  "nbformat": 4,
